# blog-project

./: .gitignore  pyproject.toml  requirements.txt
src/: api.py  blog.db  config.py  main.py  model.py  repository.py  schema.py  schema.sql  service.py  view.py
src/model/: topic_model.py
src/repository/: book_repository.py  rate_repository.py  review_repository.py  topic_repository.py
src/static/: style.css
src/templates/: base.html
src/templates/book/: create.html  list.html
src/templates/review/: create.html  list.html
src/templates/theme/: create.html  list.html
test/: test_book_repository.py  test_e2e.py  test_rate_repository.py  test_repository.py  test_review_repository.py  test_topic_repository.py  test_validation.py  util.py
