[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "blog-project"
version = "0.0.1"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
